--- a/views/partials/burger-block.handlebars
+++ b/views/partials/burger-block.handlebars
@@ -1,7 +1,7 @@
 <li>
-    {{name}}
+    {{burger_name}}
 
-    <button class="eat-or-uneat" data-id="{{id}}"> 
-        {{#if uneaten}}EAT{{else}}REGURGITATE{{/if}}
+    <button class="eat-or-uneat" data-id="{{id}}" data-burgerState="{{devoured}}"> 
+        {{#if devoured}}REGURGITATE{{else}}DEVOUR{{/if}}
     </button>
 </li>
