update devoured state complete

--- a/views/partials/burger-block.handlebars
+++ b/views/partials/burger-block.handlebars
@@ -1,7 +1,7 @@
 <li>
     {{burger_name}}
 
-    <button class="eat-or-uneat" data-id="{{id}}" data-burgerState="{{devoured}}"> 
+    <button class="eat-or-uneat" data-id="{{id}}" data-burgerstate="{{burgerstate}}"> 
         {{#if devoured}}REGURGITATE{{else}}DEVOUR{{/if}}
     </button>
 </li>
