--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,17 +5,37 @@
     <div class="row">
         <div class="col-md-6" id="uneaten-burgers">
             {{#each burgers}}
-                {{#unless devoured}}
-                    {{> burger-block burgerState=false}}
-                {{/unless}}
+            {{#unless devoured}}
+            {{> burger-block burgerstate=1}}
+            {{/unless}}
             {{/each}}
         </div>
         <div class="col-md-6" id="eaten-burgers">
             {{#each burgers}}
-                {{#if devoured}}
-                    {{> burger-block burgerState=true}}
-                {{/if}}
+            {{#if devoured}}
+            {{> burger-block burgerstate=0}}
+            {{/if}}
             {{/each}}
         </div>
     </div>
+
+    <hr>
+
+    <h2>Add Burger</h2>
+    <form class="create-form">
+
+        <div class="form-group">
+            <label for="new-burger">Burger Name:</label>
+            <input type="text" id="new-burger" name="name">
+        </div>
+
+        <div class="form-group">
+            <label for="devoured">Devoured?</label><br>
+            <input type="radio" name="devoured" value="0" checked> Uneaten<br>
+            <input type="radio" name="devoured" value="1"> Devoured!
+
+        </div>
+
+        <button type="submit">Add Burger</button>
+    </form>
 </div>
